finalized email service
