# EmailService/Application/commands/send_email/send_email_command_handler.go
@@ -8,12 +8,14 @@ import (
 )
 
 type SendEmailCommandHandler struct {
-	eventPublisher event.EventPublisher
+	eventPublisher     event.EventPublisher
+	defaultEmailSender string
 }
 
-func NewSendEmailCommandHandler(eventPublisher event.EventPublisher) *SendEmailCommandHandler {
+func NewSendEmailCommandHandler(eventPublisher event.EventPublisher, defaultEmailSender string) *SendEmailCommandHandler {
 	return &SendEmailCommandHandler{
-		eventPublisher: eventPublisher,
+		eventPublisher:     eventPublisher,
+		defaultEmailSender: defaultEmailSender,
 	}
 }
 
@@ -23,6 +25,12 @@ func (cmd *SendEmailCommandHandler) Execute(command SendEmailCommand) (contract.
 		To:      command.To,
 		Subject: command.Subject,
 		Body:    command.Body,
+	}
+	if !(command.From == cmd.defaultEmailSender || command.To == cmd.defaultEmailSender) {
+		return contract.SendEmailResponse{
+			Title:   "StatusBadRequest",
+			Message: "From or to is not the desired email address",
+		}, nil
 	}
 	if err := cmd.eventPublisher.PublishEvent("email-events.send_email", event, models.EventTypeSendEmail); err != nil {
 		return contract.SendEmailResponse{
